# projects

Network Mouse & Keyboard/: .gitlab-ci.yml
Network Mouse & Keyboard/client/src/: lib.rs
Network Mouse & Keyboard/driver/: Cargo.toml
Network Mouse & Keyboard/server/: Cargo.toml
Network Mouse & Keyboard/server/src/: lib.rs
Network Mouse & Keyboard/utils/src/: lib.rs
Network Mouse & Keyboard2/: Cargo.toml  README.md  protocol.txt
Network Mouse & Keyboard2/client/: Cargo.toml
Network Mouse & Keyboard2/driver/src/: lib.rs
Network Mouse & Keyboard2/options/: Cargo.toml
Network Mouse & Keyboard2/options/src/: main.rs
Network Mouse & Keyboard2/protocol/: Cargo.toml
Network Mouse & Keyboard2/protocol/src/: error.rs  lib.rs
Network Mouse & Keyboard2/utils/: Cargo.toml
Simplified dropbox/: .clang-format  CodingStyle.md
Simplified dropbox/src/: Makefile  generic_list.h  settings.h
Simplified dropbox/src/client/: client.c  copy.c  copy.h  helper.c  send.h  watcher.c  watcher_list.c  watcher_list.h
Simplified dropbox/src/generic_list/: Makefile  generic_list.c
Simplified dropbox/src/main/: Makefile  options.h  setup.c  setup.h  target.h
Simplified dropbox/src/packet/: Makefile  net.h  packet.c
Simplified dropbox/src/server/: extract.c  extract.h  file_info.h  server.c  set.c  set.h
Simplified dropbox/src/utils/: utils.c
Simplified dropbox/tests/: Makefile  cut.h
Simplified dropbox2/: .gitignore  .gitlab-ci.yml  Makefile  README.md  protocol.txt
Simplified dropbox2/src/: client.h  event_reader.h  log.h  packet.h  server.h  utils.h
(+43 files in other folders)
