[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
protocol = { path = "../protocol" }
itertools = "0.10.3"
utils = { path = "../utils" }
tokio = { version = "1.16.1", features = ["full"] }
log = "0.4"
