[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
utils = { path = "../utils" }
tokio = { version = "1.16.1", features = ["full"] }
log = "0.4"
