[package]
name = "protocol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
driver = { path = "../driver" }
utils = { path = "../utils" }
thiserror = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio-serde-bincode = "0.2.1"
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1.0"
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-stream = "0.1.8"
futures = "0.3"
